# NewsBlockChain

./: .gitmodules  .travis.yml  CMakeLists.txt  NewsBlockChain.pro  README.md
doc/: System Structure.drawio  设计文档.md
ext/: CMakeLists.txt
src/: Global.cpp  Global.h  Message.h  Router.cpp  Router.h  main.cpp
src/Searcher/: Search_Result_impl.cpp  Search_Result_impl.h  SearcherImpl.cpp  SearcherImpl.h  TrieDictionary.cpp  TrieDictionary.h
src/config/: CMakeConfig.h.in
src/controller/: BaseController.cpp  BaseController.h
src/controller/block/: AppendToBlcokChainController.cpp  BlockRouter.cpp  BlockRouter.h  CompressInfoController.cpp  CompressInfoController.h  ConfirmController.cpp  ConfirmController.h  InfoController.cpp  InfoController.h  ListHashController.cpp  ListHashController.h  SearchBlocksController.cpp  SearchBlocksController.h
src/controller/currentBlock/: CurrentBlockRouter.cpp  CurrentBlockRouter.h  CurrentCompressInfoController.cpp  CurrentCompressInfoController.h  CurrentConfirmController.cpp  CurrentConfirmController.h  CurrentInfoController.cpp  CurrentInfoController.h
src/controller/generalBlock/: CompressInfoController.cpp  CompressInfoController.h  ConfirmController.cpp  ConfirmController.h  GeneralBlockRouter.cpp  GeneralBlockRouter.h  InfoController.cpp  InfoController.h  ListHashController.cpp  ListHashController.h  SearchBlocksController.cpp  SearchBlocksController.h
src/controller/local/: AppendToBlcokChainController.cpp  AppendToBlcokChainController.h  ConfirmController.cpp  ConfirmController.h  ContentController.cpp  ContentController.h  InitBlockChainController.cpp  InitBlockChainController.h  ListHashController.cpp  LoadController.cpp  LoadController.h  LocalRouter.cpp  LocalRouter.h  RegisterNodeController.cpp  RegisterNodeController.h  RegisterSuperNodeController.cpp  RegisterSuperNodeController.h  SaveController.cpp  SaveController.h  SearchBlocksController.cpp  UpdateController.cpp  UpdateController.h  UpdatePartlyController.cpp  UpdatePartlyController.h
src/controller/network/: BroadcastBlockByNodeController.cpp  BroadcastBlockByNodeController.h  BroadcastBlockBySuperNodeController.cpp  BroadcastBlockBySuperNodeController.h  DeleteNodeController.cpp  DeleteNodeController.h  GetBlockController.cpp  GetBlockController.h  (+8 more)
src/service/: MerkleTreeService.cpp  MerkleTreeService.h  SearchService.h
src/util/: BitIo.cpp  BitIo.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BullShitArticleGenerator.cpp  BullShitArticleGenerator.h  Compressor.cpp  Compressor.h  Fileutil.cpp  Fileutil.h  Haffman.h  Hash.cpp  Hash.h  Huffman.cpp  Huffman.h  HuffmanTree.cpp  HuffmanTree.h  Logger.cpp  Logger.h  MerkleTree.cpp  MerkleTree.h  NetworkUtil.cpp  NetworkUtil.h  Searcher.h  StringUtil.cpp  StringUtil.h  bitio.cpp  bitio.h  huffman.cpp  huffman.h  huffmantree.cpp  huffmantree.h
test/: CMakeLists.txt
test/compressor/: TestCompressor.cpp
test/hash/: TestHash.cpp
(+31 files in other folders)
